ui_tests/tests/lowering/field-outside-constructor.stderr
error[E017]: field marker `::` used outside of a constructor declaration
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:1
  |
3 | data X (::A: Type): (::m: M) -> X of
  | ------------------------------------ not a constructor
  |
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:9
  |
3 | data X (::A: Type): (::m: M) -> X of
  |         ^^ 
  |

error[E017]: field marker `::` used outside of a constructor declaration
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:1
  |
3 | data X (::A: Type): (::m: M) -> X of
  | ------------------------------------ not a constructor
  |
 --> ${DIRECTORY}/lowering/field-outside-constructor.lushui:3:22
  |
3 | data X (::A: Type): (::m: M) -> X of
  |                      ^^ 
  |

error: aborting due to 2 previous errors
 note: the error E017 has a detailed explanation
 help: run `lushui explain E017` to view it

